test/src/e2e_vm_tests/test_programs/should_fail/match_expressions_struct_non_existing_fields/src/main.sw
script;

struct Struct {
  x: u64,
}

fn main() -> u64 {
    let p = Struct {
        x: 0,
    };

    match p {
        Struct { x, nn_1 } => { x },
        Struct { x, nn_1, nn_2 } => { x },
    };

    0
}
